added number display to the tiles for better visual representation

--- a/resource.rc
+++ b/resource.rc
@@ -33,6 +33,7 @@ MAINMENU MENU
  		MENUITEM "Slow", CM_SLOW
  		MENUITEM "Normal", CM_NORMAL
  		MENUITEM "Fast", CM_FAST
+ 		MENUITEM "Extreme", CM_EXTREME
  	}
  	MENUITEM "About", CM_ABOUT
  	MENUITEM "Exit", CM_EXIT
